ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-bilgicloud-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true" #not required if there is  no mix content 

spec:
  rules:
  - host: amllan.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: yakuphan-devops
            port:
              number: 80

  tls:
  - hosts:
    - amllan.online
    secretName: tls-2048-bilgicloud
